<resources>
    <string name="app_name">Colour Blocks</string>
    <string name="boxOne">Box 1</string>
    <string name="boxTwo">Box 2</string>
    <string name="boxThree">Box 3</string>
    <string name="boxFour">Box 4</string>
    <string name="boxFive">Box 5</string>
    <string name="greeting">Hello and welcome. Go ahead and tap anywhere on the screen!</string>
    <string name="box6">Box 6</string>
    <string name="box9">Box 9</string>
    <string name="box8">Box 8</string>
    <string name="box7">Box 7</string>
    <string name="box10">Box 10</string>
</resources>