<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/greeting"
            android:textAlignment="textStart"
            android:textSize="@dimen/boxTextSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/box1"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginWide"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/marginWide"
            android:text="@string/boxOne"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/box2"
            style="@style/WhiteBox"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/boxTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box1" />

        <TextView
            android:id="@+id/box3"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/boxThree"
            app:layout_constraintBottom_toTopOf="@+id/box4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintTop_toTopOf="@+id/box2"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/box5"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/boxFive"
            app:layout_constraintBottom_toBottomOf="@+id/box2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintTop_toBottomOf="@+id/box4" />

        <TextView
            android:id="@+id/box4"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/boxFour"
            app:layout_constraintBottom_toTopOf="@+id/box5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/box2"
            app:layout_constraintTop_toBottomOf="@+id/box3" />

        <TextView
            android:id="@+id/box6"
            style="@style/WhiteBox"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box5" />

        <TextView
            android:id="@+id/box8"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box8"
            app:layout_constraintBottom_toBottomOf="@+id/box6"
            app:layout_constraintEnd_toStartOf="@+id/box7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/box9"
            app:layout_constraintTop_toBottomOf="@+id/box2" />

        <TextView
            android:id="@+id/box9"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/box9"
            app:layout_constraintBottom_toBottomOf="@+id/box6"
            app:layout_constraintEnd_toStartOf="@+id/box8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box2" />

        <TextView
            android:id="@+id/box7"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box7"
            app:layout_constraintBottom_toBottomOf="@+id/box6"
            app:layout_constraintEnd_toStartOf="@+id/box6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/box8"
            app:layout_constraintTop_toBottomOf="@+id/box2" />

        <TextView
            android:id="@+id/box10"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/box6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>